# shinier

./: Cargo.toml  README.md  TODO.md  distribute_build_functions.sh  nodes.txt
.devcontainer/: devcontainer.json
crates/shinier_cli/: Cargo.toml
crates/shinier_fs/src/: utils.rs
crates/shinier_rb_formatter/: Cargo.toml  test_output.txt
crates/shinier_rb_formatter/src/: builder.rs  doc.rs  doc_printer.rs  document.rs  layout.rs  lib.rs  printer.rs  prism_utility.rs  symbol.rs  visitor.rs
crates/shinier_rb_formatter/src/ast/: call_node.rs  mod.rs
crates/shinier_rb_formatter/src/ast_to_doc/: consts.rs  layout.rs  mod.rs  printer.rs
crates/shinier_rb_formatter/src/builder/: buildable.rs  builder.rs  comment.rs  context.rs  keyword.rs  layout.rs  macro.rs  mod.rs  node_builder.rs  prism.rs
crates/shinier_rb_formatter/src/doc_to_str/: mod.rs  printer.rs
crates/shinier_rb_formatter/src/renderer/: mod.rs  renderer.rs  renderer_bk.rs  renderer_prettier.rs  renderer_prettier_rust.rs  utility.rs
crates/shinier_rb_formatter/tests/: snapshot_test.rs
crates/shinier_rb_formatter/tests/snapshots/: accept_all.sh  snapshot_test__run@alias_global_variable_node.rb.snap  snapshot_test__run@alias_global_variable_node.rb.snap.new  snapshot_test__run@and_node.rb.snap  (+288 more)
creats/shinier_cli/: Cargo.toml
creats/shinier_cli/src/: main.rs
creats/shinier_formatter/: Cargo.toml
creats/shinier_formatter/src/: format.rs
creats/shinier_fs/: Cargo.toml
creats/shinier_rb_formatter/src/: ast_to_doc.rs  builder.rs  doc.rs  format.rs  formatter.rs  lib.rs  printer.rs  visitor.rs
(+1549 files in other folders)
